tests/bad/logical_ops_not_bool.oc
/// fail: Operator `Or` does not support `bool` and `u32`

def main() {
    let x = true or 5
}